# repo-onboarding-agent

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
onboarding_agent/: __init__.py  agent_loop.py  cli.py  config.py  indexer.py  mcp_client.py  mcp_server.py  prompts.py  retriever.py
onboarding_agent/tools/: __init__.py  docs_tools.py  fs_tools.py  git_tools.py  pr_tools.py  test_lint_tools.py
scripts/: _common.sh  install.sh  reinstall.sh  setup_mcp.sh  uninstall.sh
skills/repo-onboarding-agent/: SKILL.md
tests/: conftest.py  test_agent_loop.py  test_cli.py  test_docs_tools.py  test_fs_tools.py  test_git_tools.py  test_indexer.py  test_mcp_client.py  test_mcp_server.py  test_pr_tools.py  test_retriever.py  test_test_lint_tools.py
tests/fixtures/docs_repo/: README.md
tests/fixtures/docs_repo/docs/: architecture.md  faq.md
