[project]
name = "repo-onboarding-agent"
version = "0.1.0"
description = "Clone-and-run CLI that gives any codebase an AI onboarding assistant (LLM + RAG + MCP + Agent)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.111,<1.0",
    "mcp>=1.28,<2.0",
    "chromadb>=1.5,<2.0",
    "sentence-transformers>=5.1,<6.0",
    "numpy>=1.26,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
]

[project.scripts]
onboarding-agent = "onboarding_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["onboarding_agent*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
